# seasonal-rings

./: .coverage  .pre-commit-config.yaml  Dockerfile  README.md  ci.yml  environment.yml  pyproject.toml  seasonal_rings.py  setup.bat  setup.sh
.github/workflows/: ci.yml  codeql.yml
VERSIONS/: seasonal_ring_chart_v0.py  seasonal_ring_chart_v1.py  seasonal_ring_chart_v2.py  seasonal_ring_chart_v3.py  seasonal_ring_chart_v4.py
docs/: readme.docx  readme.md  user-manual.docx  user_manual.md
examples/: HadSST.4.2.0.0_monthly_GLOBE.csv  HadSST.4.2.0.0_monthly_NHEM.csv  co2_mm_mlo.csv
